[gd_scene load_steps=5 format=2]

[ext_resource path="res://Buildings/Furnitures/DronePad.gd" type="Script" id=1]
[ext_resource path="res://Actors/Drones/Drone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Models/DronePad/dronepad.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.2, 0.5 )

[node name="DronePad" type="Spatial"]
script = ExtResource( 1 )
DroneScene = ExtResource( 2 )
np_drone_parking_space = NodePath("DroneParkingSpace")
basic_drone_price = 200

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="dronepad" parent="StaticBody" instance=ExtResource( 3 )]

[node name="DroneParkingSpace" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.204958, 0 )

[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
